# ET-alpha

./: .gitignore  README.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  debate_graph.py  orchestrator.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  briefing.py  chat.py  dashboard.py  debate.py  health.py  onboarding.py  patterns.py  portfolio.py  radar.py  smart_money.py  stress_test.py
backend/app/core/: config.py
backend/app/integrations/: __init__.py  llm.py  neondb.py  qdrant.py
backend/app/schemas/: __init__.py  chat.py  common.py  dashboard.py  debate.py  onboarding.py
backend/app/services/: __init__.py  chat_service.py  mock_data.py  portfolio_service.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  landing.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: dashboard.css  page.tsx
frontend/src/app/dashboard/pages/: AgentsPage.tsx  BriefingPage.tsx  ChatPage.tsx  DebatePage.tsx  IntelligencePage.tsx  PatternPage.tsx  PortfolioPage.tsx  ProfilePage.tsx  RadarPage.tsx  SettingsPage.tsx  SmartMoneyPage.tsx  StressTestPage.tsx
frontend/src/components/3d/: Effects.tsx  LandingScene.tsx  Props.tsx  ScrollContent.tsx
