[project]
name = "backend"
version = "0.1.0"
description = "ET Alpha backend API for multi-agent market intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.116.1",
	"uvicorn[standard]>=0.35.0",
	"pydantic-settings>=2.10.1",
	"langchain>=0.3.27",
	"langgraph>=0.6.6",
	"redis>=6.4.0",
	"qdrant-client>=1.15.1",
	"psycopg[binary]>=3.2.10",
	"httpx>=0.28.1",
]
